k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: grafana.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: 85.6.171.5:30002
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jira
                port:
                  number: 8080
    - host: 85.6.171.5:30003

      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
    - host: prometheus.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: 85.6.171.5
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
